Fix CMS146JsonTest to properly verify all signature level cases.